# take-home

./: .gitignore  README.md  pyproject.toml
product_analytics/: .gitignore  .user.yml  dbt_project.yml  packages.yml  profiles.yml  project_overview.md
product_analytics/analyses/: insights__power_users.sql  power_users.md
product_analytics/docs/: common.md
product_analytics/macros/: required_table_fields.sql  required_table_fields.yml
product_analytics/models/base/: base_nucleus__events.sql  base_nucleus__events.yml  base_nucleus__users.sql  base_nucleus__users.yml  base_salesforce__firms.sql  base_salesforce__firms.yml  sources.yml
product_analytics/models/core/: core__calendar.sql  core__calendar.yml  core__daily_event_summary.sql  core__daily_event_summary.yml  core__monthly_user_engagement.sql  core__monthly_user_engagement.yml  core__user_cohort_analysis.sql  core__user_cohort_analysis.yml
product_analytics/models/curated/: curated__firm_usage_summary.sql  curated__firm_usage_summary.yml
product_analytics/tests/: warn_freshness_anomalies.sql
