[project]
name = "take-home"
version = "0.1.0"
description = "Harvey AI - Analytics Engineer Take Home"
authors = [
    {name = "Vignesh Yuvaraj"}
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.11.9"

dependencies = [
    "dbt-core >=1.10.5",
    "dbt-snowflake >=1.10.0",
    "pre-commit >=4.2.0",
    "sqlfluff >=3.4.2",
    "sqlfluff-templater-dbt >=3.4.2",
    "yamllint >=1.37.1"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
